# mandelbrot-wasm-app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
src/: lib.rs  main.rs  mandelbrot.c  mandelbrot_naive.cpp  mandelbrot_naive.rs  mandelbrot_sse.cpp
static/: index.html
