[package]
name = "mandelbrot-wasm-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
colorous = "1.0.15"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
num-complex = "0.4.6"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Text",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
] }
yew = "0.21.0"
